@@ -3,6 +3,7 @@ Version 2.5 -> 2.5.1
 --------------------
  - added freebsd7 settings to setup.py (Sujan Shakya)
  - added support for unix-specific --home distutils install parameter
+ - updated MANIFEST.in as sdist started creating incomplete source archives
 
 Version 2.4 -> 2.5
 ------------------
